Update test.java